--- a/.github/workflows/main_leekw01.yml
+++ b/.github/workflows/main_leekw01.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
-        run: ./gradlew build
+        run: chmod +x ./gradlew build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
