--- a/.github/workflows/main_leekw01.yml
+++ b/.github/workflows/main_leekw01.yml
@@ -46,6 +46,9 @@ jobs:
       contents: read #This is required for actions/checkout
   
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
