--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,16 +11,17 @@ spring:
       minimum-idle: 10 # 연결 풀에서 HikariCP가 유지 관리하는 최소 유휴 연결 수
 
   # h2 ################################################################################################################
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/sangsil
+    #driver-class-name: org.h2.Driver
+    #url: jdbc:h2:tcp://localhost/~/sangsil
   # h2 ################################################################################################################
 
   # mariadb ###########################################################################################################
-#    driver-class-name: org.mariadb.jdbc.Driver
-#    url: jdbc:mariadb://localhost:3306/database
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://61.251.164.178:3306/seowon
   # mariadb ###########################################################################################################
-    username: sa
-    password:
+    #username: sa
+    username:seowon
+    password:seowon
 
   sql:
     init:
