--- a/.github/workflows/main_leekw01.yml
+++ b/.github/workflows/main_leekw01.yml
@@ -24,8 +24,10 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Build with Gradle
+        run: chmod +x ./gradlew
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
