--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
-  profiles.active: azure  # run configuration 에서 local주입해서 사용
+  profiles:
+    active: azure  # run configuration 에서 local주입해서 사용
 
   mvc:
     pathmatch:
