자바17버전으로 locale

--- a/src/main/resources/application-azure.yml
+++ b/src/main/resources/application-azure.yml
@@ -61,7 +61,7 @@ spring:
 
 server:
   host:
-    api: http://localhost:8080
+    api: http://azure1-g3geewbybwc3bdff.koreacentral-01.azurewebsites.net
     front: http://localhost:3000
   port: 8080
 
