--- a/src/main/resources/application-azure.yml
+++ b/src/main/resources/application-azure.yml
@@ -10,10 +10,10 @@ spring:
       validation-timeout: 2000
       minimum-idle: 10 # 연결 풀에서 HikariCP가 유지 관리하는 최소 유휴 연결 수
 
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://msql1.mysql.database.azure.com:3306/azure1
-    username: azure1
-    password: mysql1!@#
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://msql1.mysql.database.azure.com:3306/azure1
+#    username: azure1
+#    password: mysql1!@#
 
   sql:
     init:
