--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
-    implementation 'com.azure.spring:spring-cloud-azure-starter'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-jdbc-mysql'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-jdbc-postgresql'
+
     compileOnly 'org.projectlombok:lombok'
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -83,6 +78,8 @@ dependencies {
     implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos'
     implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
     implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
+    implementation 'com.azure.spring:spring-cloud-azure-starter-jdbc-mysql'
+    // AZURE
 
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
