--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,6 @@ plugins {
     id "com.microsoft.azure.azurewebapp" version "1.10.0"
 }
 
-ext {
-    springCloudAzureVersion = "5.20.0"
-}
-
 group = 'com.sil'
 version = '0.0.1-SNAPSHOT'
 
@@ -36,10 +32,10 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
-    //runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    //runtimeOnly 'com.mysql:mysql-connector-j'
-    runtimeOnly 'org.postgresql:postgresql'
+//    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'org.postgresql:postgresql'
+//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc
@@ -71,14 +67,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 
     // AZURE
-    implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
-    implementation 'com.azure.spring:spring-cloud-azure-starter'
-    implementation 'com.azure.spring:spring-cloud-azure-starter-jdbc-postgresql'
-    // https://mvnrepository.com/artifact/com.azure/azure-core-http-netty
-    implementation group: 'com.azure', name: 'azure-core-http-netty', version: '1.15.9'
+    // https://mvnrepository.com/artifact/com.azure.spring/spring-cloud-azure-starter-jdbc-postgresql
+    implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-jdbc-postgresql', version: '5.20.0'
     // AZURE
 
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
@@ -101,9 +91,9 @@ azurewebapp {
     resourceGroup = 'azure1_group'
     appName = 'bejpa'
     runtime {
-      os = 'Linux'
-      webContainer = 'Java SE' // or 'Java SE' if you want to run an executable jar
-      javaVersion = 'Java 17'
+        os = 'Linux'
+        webContainer = 'Java SE' // or 'Java SE' if you want to run an executable jar
+        javaVersion = 'Java 17'
     }
     auth {
         type = 'azure_cli' // support azure_cli, oauth2, device_code and service_principal
@@ -112,12 +102,6 @@ azurewebapp {
 
 clean {
     delete file(querydslDir)
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "com.azure.spring:spring-cloud-azure-dependencies:$springCloudAzureVersion"
-    }
 }
 
 tasks.named('test') {
