--- a/src/main/resources/application-azure.yml
+++ b/src/main/resources/application-azure.yml
@@ -1,7 +1,7 @@
 spring:
   sql:
     init:
-      mode: always	# 초기 쿼리문 작성 always, never
+      mode: never	# 초기 쿼리문 작성 always, never
       schema-locations: classpath*:initSql/schema.sql
       data-locations: classpath*:initSql/data.sql
 
@@ -9,11 +9,12 @@ spring:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: create   #create, update, validate, none, create-drop
+      ddl-auto: update   #create, update, validate, none, create-drop
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl   # 카멜이 언더바로 변경되는거 막기
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl   # 쿼리중 필드가 지정한대로 하도록(대소문자 구분하는 DB의 경우 완전 필요)
     defer-datasource-initialization: true	# sql 파일이 hibernate 초기화 이후 동작하게 하기 위한 옵션
+    database: postgresql
 
     p6spy:
       enable-logging: true   # JDBC 이벤트 로깅을 위한 P6LogFactory 등록
@@ -27,9 +28,6 @@ spring:
 #      custom-appender-class: my.custom.LoggerClass   # 커스텀 로거 클래스 지정: 사용할 클래스 파일 (logging=custom일 때만). 클래스는 com.p6spy.engine.spy.appender.FormattedLogger를 구현해야 함
 #      log-format:   # 커스텀 로그 포맷 지정: 지정하면 com.p6spy.engine.spy.appender.CustomLineFormat이 이 로그 포맷으로 사용됨 
       # 로그 메시지 필터링을 위한 정규 표현식 패턴 사용: 지정되면 일치하는 메시지만 로깅됨
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
   #      log-filter:
 #        pattern:
 
